<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_principal">

    <fragment
        android:id="@+id/navigation_configuration"
        android:name="itson.equipo4.connect.Fragments.configuration.ConfigurationFragment"
        android:label="@string/configuracion"
        tools:layout="@layout/fragment_configuration" />

    <fragment
        android:id="@+id/navigation_principal"
        android:name="itson.equipo4.connect.Fragments.principal.PrincipalFragment"
        tools:layout="@layout/fragment_principal"
        android:label="@string/principal"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="itson.equipo4.connect.Fragments.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile"
        android:label="@string/perfil"/>
</navigation>