<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrincipal"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    tools:context=".activities.RegistroActivity">

    <ImageView
        android:id="@+id/registro_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/registro_tv_registrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/registrate"
        android:textAlignment="center"
        android:textColor="@color/textoOscuro"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/registro_tv_correoElectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/correoElectronico"
        android:textColor="@color/textoOscuro"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/registro_et_correoElectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textbox"
        android:hint="hola@mundo.com"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/textoOscuro"
        android:textColorHint="@color/textoClaro"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/registro_tv_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/contrasena"
        android:textColor="@color/textoOscuro"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/registro_et_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textbox"
        android:hint="*********"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/textoOscuro"
        android:textColorHint="@color/textoClaro"
        android:textSize="22dp" />

    <Button
        android:id="@+id/registro_btn_crearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/boton_cancelar"
        android:fontFamily="@font/montserrat_bold"
        android:paddingHorizontal="20dp"
        android:text="@string/crearCuenta"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/registro_tv_yaTienesCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:paddingHorizontal="20dp"
        android:text="@string/recordatorioCuenta"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/registro_btn_iniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/boton_aceptar"
        android:fontFamily="@font/montserrat_bold"
        android:paddingHorizontal="20dp"
        android:text="@string/iniciarSesion"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>