<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrincipal"
    tools:context=".activities.RegistroActivity"
    android:gravity="center"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <ImageView android:id="@+id/registro_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        />

    <TextView android:id="@+id/registro_tv_registrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crearCuenta"
        android:textColor="@color/textoOscuro"
        android:textSize="36sp"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="center"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView android:id="@+id/crearCuenta_iv_fotoPerfil"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/perfil"
            />

        <ImageView android:id="@+id/crearCuenta_iv_nuevaFotoPerfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/nuevafotoperfil"
            android:layout_alignRight="@id/crearCuenta_iv_fotoPerfil"
            android:layout_alignBottom="@id/crearCuenta_iv_fotoPerfil"/>

    </RelativeLayout>

    <TextView android:id="@+id/registro_tv_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreDeUsuario"
        android:textColor="@color/textoOscuro"
        android:textColorHint="@color/textoClaro"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_bold"
        />

    <EditText android:id="@+id/registro_et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_nombre"
        android:textSize="24sp"
        android:textColor="@color/textoOscuro"
        android:shadowColor="@color/textoClaro"
        android:background="@drawable/textbox"/>


    <Button android:id="@+id/registro_btn_comienza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comienza"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat_bold"
        android:background="@drawable/boton_aceptar"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        />

</LinearLayout>