<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="@dimen/fullbar_padding_top"
    tools:context=".fragments.AccesoRapidoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/accesoRapido_tv_notasRecientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/notasRecientes"
                android:textColor="@color/textoOscuro"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/accesoRapido_rv_notasRecientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                tools:itemCount="5"
                tools:listitem="@layout/accesorapido_view" />

            <TextView
                android:id="@+id/accesoRapido_tv_documentosRecientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/documentosRecientes"
                android:textColor="@color/textoOscuro"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/accesoRapido_rv_documentosRecientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                tools:itemCount="5"
                tools:listitem="@layout/accesorapido_view" />

            <TextView
                android:id="@+id/accesoRapido_tv_multimediaReciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/multimediaReciente"
                android:textColor="@color/textoOscuro"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/accesoRapido_rv_multimediaReciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                tools:itemCount="5"
                tools:listitem="@layout/accesorapido_view" />

            <TextView
                android:id="@+id/accesoRapido_tv_pizarraReciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/pizarraReciente"
                android:textColor="@color/textoOscuro"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/accesoRapido_rv_pizarraReciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                tools:itemCount="5"
                tools:listitem="@layout/accesorapido_view" />

        </LinearLayout>

    </ScrollView>
</FrameLayout>